--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Demo 7 de la Suerte</title>
+  <title>Descomposicion Multiplicaciones</title>
   <link rel="shortcut icon" href="favicon.ico" />
 	<link rel="stylesheet" href="app.css" type="text/css" />
 	<script src="lib/phaser.min.js"></script>
